--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,29 @@
 {
-  "name": "mp3000mp/RedisClient",
+  "name": "mp3000mp/redis-client",
   "authors": [
     {
       "name": "mp3000mp",
       "email": "moussadedijon@gmail.com"
     }
   ],
+  "autoload": {
+    "psr-4": {
+      "mp3000mp\\RedisClient\\": ["src/"]
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "mp3000mp\\RedisClient\\Tests\\": ["tests/"]
+    }
+  },
   "require": {
+    "php": "^7.3",
     "ext-json": "*",
-    "ext-redis": "*"
+    "ext-redis": "*",
+    "phpstan/phpstan-phpunit": "^0.12.16"
+  },
+  "require-dev": {
+    "phpstan/phpstan": "^0.12.44"
   },
   "scripts": {
     "cs": "php-cs-fixer fix --dry-run --allow-risky=yes --config=./.php_cs.dist",
