--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
 # IDE
 /.idea
 
+# redis params for testing
+/config.php
+
 ###> friendsofphp/php-cs-fixer ###
 /.php_cs
 /.php_cs.cache
 ###< friendsofphp/php-cs-fixer ###
 
 /vendor
+
+/ic
+/.phpunit.result.cache
