--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,11 @@ addons:
 services:
   - redis-server
 
-before_install:
-  - sudo service redis-server start --bind 127.0.0.1
-  - before_script: echo "extension = redis.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
-
 install:
   - composer install
+
+before_script:
+  - echo "extension = redis.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
 
 script:
   - composer run tu
