--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ script:
   - composer run tu
 
 after_success:
-  - php vendor/bin/php-coveralls -v --exclude-no-stmt
+  - travis_retry php vendor/bin/php-coveralls -v --exclude-no-stmt
