--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
 script:
   - composer install
   - composer run cs
-  - composer run tu
+  - composer run tuc
 
 after_success:
   - travis_retry php vendor/bin/php-coveralls -v --exclude-no-stmt
